# tg_sender

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  start-local.sh
docker/: Dockerfile  docker-compose-local.yml
src/: main.py
src/api/: dependencies.py  main.py
src/configs/: config.py  logger.py
src/constants/: message.py
src/schemas/: message.py  request.py  service.py
src/services/: bots.py  global_limiter.py  rate_limiter.py  telegram.py
src/utils/: redis.py
src/workers/: consumers.py  producers.py  service.py
